# dci-core-idl

./: CMakeLists.txt
cmakeModules/: dciIdl.cmake
im/: ast.hpp  errorInfo.cpp  errorInfo.hpp  posInSources.cpp  posInSources.hpp  sign.cpp  sign.hpp  signBuilder.cpp  signBuilder.hpp  storage.cpp  storage.hpp
im/ast/: alias.hpp  array.hpp  decl.hpp  enum.hpp  enumField.hpp  exception.hpp  exceptionBase.hpp  exceptionField.hpp  flags.hpp  flagsField.hpp  interface.hpp  interfaceBase.hpp  interfaceOpposite.hpp  list.hpp  map.hpp  method.hpp  methodParam.hpp  name.hpp  opt.hpp  predecl.hpp  primitive.hpp  ptr.hpp  scope.hpp  scopeEntry.cpp  scopeEntry.hpp  scopedName.cpp  scopedName.hpp  set.hpp  struct.hpp  structBase.hpp  structField.hpp  tuple.hpp  typeUse.hpp  variant.hpp
im/proc/: nameChecker.hpp  nestedScopeExpander.hpp  ownerIndexer.hpp  scopeMerger.hpp  scopedNameOrderChecker.hpp  scopedNameResolver.hpp  signer.hpp
include/dci/: idl.hpp
include/dci/idl/: api.hpp  flagsSupport.hpp  iId.hpp  iLid.hpp  iSide.hpp  interface.hpp  introspection.hpp
include/dci/idl/contract/: arg.hpp  hmDescriptor.hpp  hmDescriptorBase.hpp  hmbDescriptor.hpp  id.hpp  lid.hpp  lidRegistry.hpp  mdDescriptor.hpp  mdDescriptorBase.hpp  mdState.hpp  noReply.hpp  res.hpp  resAdapter.hpp  useCounter.hpp  wiresBundle.hpp  wiresBundlesContainer.hpp
include/dci/idl/interface/: generic.hpp  id.hpp  implBase.hpp  initializer.hpp  lid.hpp  methods.hpp  methodsBase.hpp  side.hpp  stateHolder.hpp
include/dci/idl/interface/exception/: methodNotConnected.hpp  methodNotImplemented.hpp
prs/: config.hpp  error.cpp  error.hpp  exec.cpp  exec.hpp  grammar.hpp  iterator.hpp  state.cpp  state.hpp
src/contract/: id.cpp  lidRegistry.cpp
src/contract/impl/: lidRegistry.cpp  lidRegistry.hpp
src/interface/: id.cpp  lid.cpp
test/: parser1.cpp  parser1.idl  parser1_i1.idl  signBuilder.cpp  variant.cpp  variant.idl
test/interface/: call.idl  callArg.cpp  callCpMv.cpp  callMultiarg.cpp  callMultiple.cpp  callRet.cpp  callUnconnected.cpp  cast.cpp  cast.idl
transpiler/: main.cpp
